Bug#42745 : Exception: can't find table space during recovery In rare circumstances it can happen that information about newly created tablespace that is stored in falcon system tables  is not yet flushed to the disk. Recovery that processes a log record that reference such tablespace, will fail.

Solution:
Skip  all updates to such tablespaces. This will make database consistent after recovery even if some tables creating right before crash will be missing.


This patch also includes fix for Bug#42743 Falcon fails to recover;Test tablespace file is not open when doing a fetchPage